[tool.poetry]
name = "currency_exchange"
version = "0.1.0"
description = "A console utility to fetch exchange rates of EUR and USD from PrivatBank API."
authors = ["Rai <154880397+Rai925@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
